<resources>
    <string name="app_name">zippy</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="no_Account">Don\'t have an account?</string>
    <string name="clickable_register">Register</string>
    <string name="forgot_password_clickable">Forgot Password</string>
    <string name="login_screen_title">Welcome Back!</string>
    <string name="register_screen_title">Register</string>
    <string name="btn_login">Log In</string>
    <string name="btn_register">Register</string>
    <string name="str_instructor">Instructor</string>
    <string name="str_student">Student</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_about">About</string>
    <string name="str_exit">Exit</string>
    <string name="str_register">Register</string>
    <string name="have_account">Already have an account?</string>
    <string name="str_designation">Designation</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_institution">Institution</string>
    <string name="str_re_type_password">re-type password</string>
    <string name="str_employee_id">Employee ID</string>
    <string name="str_registration_no">Registration No</string>
    <string name="action_settings">Settings</string>
    <string name="cng_profile_pic">Change Profile Picture</string>
    <string name="btn_upload">Upload Image</string>
    <string name="btn_submit">Submit</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="title_chat">Chat</string>
    <string name="str_log_out">Log out</string>
    <string name="choose_screen_title">Choose Account Type</string>
    <string name="str_img_des">Profile Picture</string>
    <string name="str_courses">Enrolled Courses</string>
    <string name="str_course_code">Code</string>
    <string name="str_course_title">Title</string>
    <string name="str_course_year">Year</string>
    <string name="str_course_credit">Credit</string>
    <string name="title_profile">Profile</string>
    <string name="str_created_courses">Created Courses</string>
    <string name="str_enrolled_courses">Enrolled Courses</string>
    <string name="str_create_new_course">Create New Course</string>
    <string name="str_pass_code">PassCode</string>
    <string name="str_create">Create</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_enroll">Enroll</string>
    <string name="str_add_course">Add Course</string>
    <string name="str_splash_details">Zippy a dynamic learning environment for students and instructors to make the academic grading system easy. So get started, keep your courses organized, and get to know the constant progress on Zippy.</string>
    <string name="btn_get_started">Get Started</string>
    <string name="str_about_details">Zippy a dynamic learning environment for students and instructors to make the academic grading system easy. So get started, keep your courses organized, and get to know the constant progress on Zippy.   And go play now.</string>
    <string name="str_oops">OOPS!</string>
    <string name="str_no_internet_connection">No Internet Connection</string>
    <string name="str_please_check_your_connection">Please check your connection</string>
    <string name="str_retry">Retry</string>
    <string name="str_student_details">Student Details</string>
    <string name="str_attendance">Attendance</string>
    <string name="str_finish">Finish</string>
    <string name="str_tests">Tests</string>
    <string name="str_present">Present</string>
    <string name="str_0">0</string>
    <string name="str_absent">Absent</string>
    <string name="str_present_percentage">Attendance Percentage</string>
    <string name="str_0percent">0%</string>
    <string name="str_final_grade">Final Grade</string>
    <string name="str_null">null</string>
    <string name="str_student_name">Student\'s name</string>
    <string name="str_total_student">Total Student</string>
    <string name="str_student_list">Student List</string>
    <string name="str_test_title">Test Title</string>
    <string name="str_total_mark">Total Mark</string>
    <string name="str_convert_to">Convert To</string>
    <string name="str_upload">Upload Question</string>
    <string name="str_submit">Submit</string>
    <string name="str_create_new_test">Create New Test</string>
    <string name="date_today">Date Today</string>
    <string name="today">2021â€“6â€“14</string>
    <string name="str_today">"Today: "</string>
    <string name="str_done">Done</string>
    <string name="str_total_day">Total Day</string>
    <string name="str_attendance_list">Attendance List</string>
    <string name="str_date">Date</string>
    <string name="str_upload_mark_sheet">Upload Mark Sheet</string>
    <string name="str_upload_question">Upload Question</string>
    <string name="str_change_pic">Change Profile Picture</string>
    <string name="str_change_user_name">Change User Name</string>
    <string name="str_change_institution">Change Institution</string>
    <string name="str_change_designation">Change Designation</string>
    <string name="str_change_employee_id">Change Employee ID</string>
    <string name="str_change_registration_no">Change Registration No</string>
    <string name="str_profile_lock">Profile Lock</string>
    <string name="str_profile_locked">Profile is Locked</string>
    <string name="str_off">OFF</string>
    <string name="str_on">ON</string>
    <string name="str_dark_theme">Dark Theme</string>
    <string name="str_mark_sheet">Mark Sheet</string>
    <string name="str_question">Question</string>
    <string name="str_your_total_mark">Your Total Mark</string>
    <string name="str_after_conversion">After Conversion</string>
    <string name="str_warning">Warning</string>
    <string name="str_csv_format">""</string>
    <string name="str_okay">Okay</string>
    <string name="str_complete">Complete</string>
    <string name="str_upload_grading_scale">Upload Grading Scale</string>
    <string name="str_assign_attendance_mark">Assign Mark on Attendance</string>
    <string name="str_attendance_mark">Mark on Attendance</string>
    <string name="str_your_attendance_mark">You mark on Attendance</string>
    <string name="str_show_instructor_profile">Show Instructor Profile</string>
    <string name="default_notification_channel_name">From Zippy</string>
    <string name="title_requests">Requests</string>
    <string name="blocked_from">"This user has been blocked from "</string>
    <string name="str_block_list">BlockList</string>
    <string name="str_update_profile_information">Update Profile Information</string>
    <string name="str_new_user_name">New User Name</string>
    <string name="str_New_Institute">New Institute</string>
    <string name="str_New_Registration_No">New Registration No</string>
    <string name="str_update">Update</string>
    <string name="str_New_designation">New Designation</string>
    <string name="str_New_Employ_ID">New Employ Id</string>
    <string name="str_New_Employee_ID">New Employee Id</string>
    <string name="str_instruction">Instructions :</string>
    <string name="str_instruction_for_students">If you are a student, you have an extra feature to lock your profile to prevent others from seeing your enrolled courses but the instructors can see their courses in your profile as they have the right to see their courses, you know. If you have mistakenly enrolled in any course or the instructor do not want to have you in his courses anymore [I guess you must have annoyed him that much] he/she can get you out of their courses and remember you can hide your marks from you fellow buddies but can not hide from your instructor so be aware of that. If you have any enquiry to anyone just go search for him and message him it is that easy to communicate.</string>
    <string name="str_instruction_for_instructors">In case you are a instructor and are uploading a csv markSheet you need to make sure there is only three comma separated values in each line which must be students regNo, totalMark and convertedMark. You will be able to re-upload markSheet until the course completion. Again, be aware while uploading your gradingScale. You must follow the specific format for your csv like there would be two values in each line. One for upper limit of mark range for certain grade and the other for letter grade or point grade whichever you prefer. Make sure you have uploaded everything right before exiting the screen as you would not be able to re-upload gradingScale if you made a mistake.</string>
    <string name="str_send_message">Send message</string>
    <string name="str_send_mail">Send Mail</string>
    <string name="str_contact">Contact</string>
</resources>