<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <TextView
        android:id="@+id/txtviewcoursecode"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_course_code"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="@dimen/list_items"
        android:lines="2"
        android:layout_weight=".5"/>

    <TextView
        android:id="@+id/txtviewcoursetitle"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/str_course_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="@dimen/list_items"
        android:layout_weight="2"
        android:lines="4"/>

    <TextView
        android:id="@+id/txtviewcourseyear"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_course_year"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="@dimen/list_items"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/txtviewcoursecredit"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_course_credit"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:textSize="@dimen/list_items"
        android:layout_weight=".5"/>

</LinearLayout>