<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.androiod.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textFieldColor"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_baseline_error_24"
        android:layout_gravity="center"
        app2:tint="@color/colorNoInternet" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_warning"
        android:textStyle="bold"
        android:textSize="@dimen/little_title"
        android:gravity="center"
        android:textColor="@color/colorNoInternet"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <TextView
            android:id="@+id/warningDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_csv_format"
            android:textStyle="bold"
            android:textSize="@dimen/little_title"
            android:gravity="center"
            android:textColor="@color/colorNoInternet"/>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOkay"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAllCaps="true"
        android:backgroundTint="@color/colorNoInternet"
        android:textColor="@color/button_txt_color"
        android:text="@string/str_okay"/>
</LinearLayout>