<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterInstructorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mtoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            app:titleMarginStart="1in"
            android:background="@color/appbarColor"
            tools:ignore="InOrMmUsage">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtviewregister"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/str_register"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/title"
            android:textStyle="normal"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/edittxtfullname"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="@dimen/edit_txt_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/textfieldColor"
            android:ems="10"
            android:hint="@string/str_full_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:paddingStart=".1in"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
             tools:ignore="MissingConstraints,RtlSymmetry" />

        <EditText
            android:id="@+id/edittxtemail"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="@dimen/edit_txt_width"
            android:layout_height="wrap_content"
            android:background="@color/textfieldColor"
            android:ems="10"
            android:hint="@string/str_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingStart=".1in"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <EditText
            android:id="@+id/edittxtinstitution"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="@dimen/edit_txt_width"
            android:layout_height="wrap_content"
            android:background="@color/textfieldColor"
            android:ems="10"
            android:hint="@string/str_institution"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart=".1in"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <EditText
            android:id="@+id/edittxtemplyeeid"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="@dimen/edit_txt_width"
            android:layout_height="wrap_content"
            android:background="@color/textfieldColor"
            android:ems="10"
            android:hint="@string/str_employee_id"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart=".1in"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            tools:ignore="MissingConstraints,RtlSymmetry" />


        <EditText
            android:id="@+id/edittxtdesignation"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="@dimen/edit_txt_width"
            android:layout_height="wrap_content"
            android:background="@color/textfieldColor"
            android:ems="10"
            android:hint="@string/str_designation"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:paddingStart=".1in"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <EditText
            android:id="@+id/edittxtpassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="@dimen/edit_txt_width"
            android:layout_height="wrap_content"
            android:background="@color/textfieldColor"
            android:ems="10"
            android:hint="@string/str_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart=".1in"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <EditText
            android:id="@+id/edittxtretypepassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="@dimen/edit_txt_width"
            android:layout_height="wrap_content"
            android:background="@color/textfieldColor"
            android:ems="10"
            android:hint="@string/str_re_type_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingStart=".1in"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/str_register"
            android:typeface="normal"
            android:textSize="@dimen/button_txt"
            app:backgroundTint="@color/buttonColor"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/haveAccount"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:text="@string/have_account"
                android:textColor="@color/buttonColor"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/txtviewlogin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_login"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/linkColor"
                tools:ignore="MissingConstraints"
                tools:text="@string/btn_login" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>