<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseAccountType">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mtoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            app:titleMarginStart="1in"
            android:background="@color/appbarColor"
            tools:ignore="InOrMmUsage">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/instructorbtn"
        android:layout_width="226dp"
        android:layout_height="59dp"
        android:textSize="@dimen/button_txt"
        android:text="@string/str_instructor"
        app:backgroundTint="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.258" />

    <Button
        android:id="@+id/studentbtn"
        android:layout_width="226dp"
        android:layout_height="59dp"
        android:textSize="@dimen/button_txt"
        android:text="@string/str_student"
        app:backgroundTint="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructorbtn"
        app:layout_constraintVertical_bias="0.155" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:layout_marginBottom="264dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentbtn"
        app:layout_constraintVertical_bias="0.09">

        <TextView
            android:id="@+id/haveAccount"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:text="@string/have_account"
            android:textColor="@color/buttonColor"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txtviewlogin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/btn_login"
            android:textColor="@color/linkColor"
            tools:ignore="MissingConstraints"
            android:focusable="true" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>